# laarid_package_android-libhardware

./: .travis.yml  Android.mk  Makefile.am  android-hardware-0.0.pc.in  configure.ac  hardware.c
debian/: README  README.source  changelog  control  copyright  default-android-sensors-hwmodule.install  default-android-vehicle-hwmodule.install  libandroid-hardware0-dev.install  libandroid-hardware0.install  libandroid-hardware0.lintian-overrides  libandroid-hardware0.symbols  watch
include/hardware/: Makefile.inc
modules/input/evdev/: BitUtils.cpp  EvdevModule.cpp  InputDevice.cpp  InputDeviceManager.cpp  InputHub.cpp  MouseInputMapper.cpp  SwitchInputMapper.cpp
modules/power/: power.c
modules/sensors/: Android.mk  multihal.cpp
modules/thermal/: thermal.c
modules/vehicle/: Android.mk  vehicle.c
tests/camera2/: CameraBurstTests.cpp  CameraFrameTests.cpp  CameraModuleTests.cpp  CameraMultiStreamTests.cpp  CameraStreamTests.cpp  camera2_utils.cpp
tests/input/evdev/: TestHelpers.cpp
tests/keymaster/: keymaster_test.cpp
